# django-workspaces

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  taplo.toml
.github/workflows/: release.yml  test.yml
demo/: settings.py
src/django_workspaces/: __init__.py  _compat.py  middleware.py  signals.py
src/django_workspaces/contrib/: __init__.py
src/django_workspaces/contrib/channels/: __init__.py  middleware.py
src/django_workspaces/contrib/preferences/: apps.py  models.py  signal_handlers.py
tests/: test_middleware.py  test_utils.py
tests/contrib/channels/: test_middleware.py
